--- a/src/sistemavinculacion/vista/FXMLRegistrarProyectoOferta.fxml
+++ b/src/sistemavinculacion/vista/FXMLRegistrarProyectoOferta.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="740.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sistemavinculacion.controlador.FXMLRegistrarProyectoOfertaController">
+<AnchorPane id="AnchorPane" prefHeight="740.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistemavinculacion.controlador.FXMLRegistrarProyectoOfertaController">
    <children>
       <ComboBox fx:id="cbProyectos" layoutX="188.0" layoutY="70.0" prefHeight="31.0" prefWidth="225.0" promptText="Nombre Proyecto" />
       <TextArea fx:id="taDescripcion" layoutX="188.0" layoutY="140.0" prefHeight="77.0" prefWidth="225.0" promptText="Descripcion" />
@@ -18,7 +17,7 @@
       <TextArea fx:id="taRequisitos" layoutX="188.0" layoutY="471.0" prefHeight="77.0" prefWidth="225.0" promptText="Requisitos" />
       <Button layoutX="224.0" layoutY="580.0" mnemonicParsing="false" onAction="#clicAdjuntarDocumento" text="Adjuntar Documento" />
       <Button layoutX="264.0" layoutY="646.0" mnemonicParsing="false" onAction="#clicAgregar" text="Agregar" />
-      <ImageView fitHeight="122.0" fitWidth="126.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="122.0" fitWidth="126.0" layoutX="14.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/Logo-UV.jpg" />
          </image>
