--- a/src/sistemavinculacion/vista/FXMLCrearOfertaProyectos.fxml
+++ b/src/sistemavinculacion/vista/FXMLCrearOfertaProyectos.fxml
@@ -8,10 +8,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="529.0" prefWidth="704.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sistemavinculacion.controlador.FXMLCrearOfertaProyectosController">
+<AnchorPane id="AnchorPane" prefHeight="529.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistemavinculacion.controlador.FXMLCrearOfertaProyectosController">
    <children>
-      <ImageView fitHeight="137.0" fitWidth="139.0" layoutX="14.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="137.0" fitWidth="139.0" layoutX="9.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/Logo-UV.jpg" />
          </image>
