--- a/src/sistemavinculacion/vista/FXMLDellatesEstdudianteSeleccion.fxml
+++ b/src/sistemavinculacion/vista/FXMLDellatesEstdudianteSeleccion.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,20 +8,61 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="584.0" prefWidth="652.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sistemavinculacion.controlador.FXMLDellatesEstdudianteSeleccionController">
+<AnchorPane id="AnchorPane" prefHeight="663.0" prefWidth="652.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistemavinculacion.controlador.FXMLDellatesEstdudianteSeleccionController">
    <children>
-      <ImageView fitHeight="107.0" fitWidth="100.0" layoutX="30.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="107.0" fitWidth="100.0" layoutX="20.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/Usuario%20Estudiante.png" />
          </image>
       </ImageView>
-      <TextField fx:id="tfNombre" layoutX="192.0" layoutY="132.0" prefHeight="48.0" prefWidth="269.0" promptText="Nombre" />
-      <TextField fx:id="tfMatricula" layoutX="192.0" layoutY="198.0" prefHeight="48.0" prefWidth="269.0" promptText="Matricula" />
-      <TextField fx:id="tfCarrera" layoutX="192.0" layoutY="268.0" prefHeight="48.0" prefWidth="269.0" promptText="Carrera" />
-      <TextField fx:id="tfCorreo" layoutX="192.0" layoutY="338.0" prefHeight="48.0" prefWidth="269.0" promptText="Correo" />
-      <TextField fx:id="tfTelefono" layoutX="192.0" layoutY="405.0" prefHeight="48.0" prefWidth="269.0" promptText="Telefono" />
-      <Button layoutX="69.0" layoutY="518.0" mnemonicParsing="false" onAction="#clicVolver" prefHeight="31.0" prefWidth="123.0" text="Volver" />
-      <Button layoutX="435.0" layoutY="518.0" mnemonicParsing="false" onAction="#clicSeleccionarProyecto" prefHeight="31.0" prefWidth="167.0" text="Seleccionar Proyecto" />
+      <TextField fx:id="tfNombre" layoutX="251.0" layoutY="159.0" prefHeight="48.0" prefWidth="269.0" promptText="Nombre" />
+      <TextField fx:id="tfMatricula" layoutX="251.0" layoutY="217.0" prefHeight="48.0" prefWidth="269.0" promptText="Matricula" />
+      <TextField fx:id="tfCarrera" layoutX="251.0" layoutY="273.0" prefHeight="48.0" prefWidth="269.0" promptText="Carrera" />
+      <TextField fx:id="tfCorreo" layoutX="251.0" layoutY="328.0" prefHeight="48.0" prefWidth="269.0" promptText="Correo" />
+      <TextField fx:id="tfTelefono" layoutX="251.0" layoutY="383.0" prefHeight="48.0" prefWidth="269.0" promptText="Telefono" />
+      <Button layoutX="70.0" layoutY="596.0" mnemonicParsing="false" onAction="#clicVolver" prefHeight="31.0" prefWidth="123.0" text="Volver" />
+      <Button layoutX="436.0" layoutY="596.0" mnemonicParsing="false" onAction="#clicSeleccionarProyecto" prefHeight="31.0" prefWidth="167.0" text="Seleccionar Proyecto" />
+      <TextField fx:id="tfPromedio" layoutX="251.0" layoutY="437.0" prefHeight="48.0" prefWidth="269.0" promptText="Promedio" />
+      <TextField fx:id="tfCreditos" layoutX="251.0" layoutY="495.0" prefHeight="48.0" prefWidth="269.0" promptText="Creditos" />
+      <Label layoutX="64.0" layoutY="175.0" text="Nombre del Estudiante:">
+         <font>
+            <Font name="Bookman Old Style Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="156.0" layoutY="233.0" text="Matricula:">
+         <font>
+            <Font name="Bookman Old Style Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="166.0" layoutY="289.0" text="Carrera:">
+         <font>
+            <Font name="Bookman Old Style Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="169.0" layoutY="344.0" text="Correo:">
+         <font>
+            <Font name="Bookman Old Style Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="159.0" layoutY="399.0" text="Telefono:">
+         <font>
+            <Font name="Bookman Old Style Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="99.0" layoutY="453.0" text="Promedio General:">
+         <font>
+            <Font name="Bookman Old Style Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="100.0" layoutY="511.0" text="Avance (Creditos):">
+         <font>
+            <Font name="Bookman Old Style Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="166.0" layoutY="53.0" text="Detalles del Estudiante">
+         <font>
+            <Font name="Bodoni MT Black" size="32.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
