--- a/src/sistemavinculacion/vista/FXMLProyectosAsignar.fxml
+++ b/src/sistemavinculacion/vista/FXMLProyectosAsignar.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,16 +8,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="639.0" prefWidth="980.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sistemavinculacion.controlador.FXMLProyectosAsignarController">
+<AnchorPane id="AnchorPane" prefHeight="639.0" prefWidth="980.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistemavinculacion.controlador.FXMLProyectosAsignarController">
    <children>
-      <TableView fx:id="tvProyectosOferta" layoutX="74.0" layoutY="190.0" prefHeight="340.0" prefWidth="833.0">
+      <TableView fx:id="tvProyectosOferta" layoutX="17.0" layoutY="190.0" prefHeight="340.0" prefWidth="944.0">
         <columns>
-          <TableColumn prefWidth="264.0" text="Nombre Proyecto" />
-          <TableColumn prefWidth="216.0" text="Organizacion" />
-            <TableColumn prefWidth="116.0" text="Fecha Inicio" />
-            <TableColumn prefWidth="145.0" text="Fecha Termino" />
-            <TableColumn prefWidth="91.0" text="Cupos" />
+          <TableColumn fx:id="colNombre" prefWidth="305.0" text="Nombre Proyecto" />
+          <TableColumn fx:id="colOrganizacion" prefWidth="268.0" text="Organizacion" />
+            <TableColumn fx:id="colFechaInicio" prefWidth="136.0" text="Fecha Inicio" />
+            <TableColumn fx:id="colFechaTerimno" prefWidth="152.0" text="Fecha Termino" />
+            <TableColumn fx:id="colCupos" prefWidth="82.0" text="Cupos" />
         </columns>
       </TableView>
       <Label layoutX="22.0" layoutY="137.0" text="Primera Opcion:">
@@ -49,11 +49,21 @@
             <Font name="Bodoni MT" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="clicAsignarProyecto" layoutX="409.0" layoutY="564.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="162.0" text="Asignar Proyecto" />
-      <Label layoutX="378.0" layoutY="76.0" text="Opciones del Estudiante:">
+      <Button layoutX="409.0" layoutY="564.0" mnemonicParsing="false" onAction="#clicAsignarProyecto" prefHeight="31.0" prefWidth="162.0" text="Asignar Proyecto" />
+      <Label layoutX="378.0" layoutY="86.0" text="Opciones del Estudiante:">
          <font>
             <Font name="Bodoni MT Condensed Bold Italic" size="28.0" />
          </font>
       </Label>
+      <Label layoutX="237.0" layoutY="31.0" text="Asignar Proyecto al Estudiante">
+         <font>
+            <Font name="Bodoni MT Black" size="32.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="103.0" fitWidth="118.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../imagenes/Logo-UV.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
