--- a/src/sistemavinculacion/vista/FXMLSeleccionEstudianteProyecto.fxml
+++ b/src/sistemavinculacion/vista/FXMLSeleccionEstudianteProyecto.fxml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="521.0" prefWidth="733.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sistemavinculacion.controlador.FXMLSeleccionEstudianteProyectoController">
+<AnchorPane id="AnchorPane" prefHeight="690.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistemavinculacion.controlador.FXMLSeleccionEstudianteProyectoController">
    <children>
-      <TableView fx:id="tvEstudiantes" layoutX="42.0" layoutY="121.0" prefHeight="309.0" prefWidth="652.0">
+      <TableView fx:id="tvEstudiantes" layoutX="40.0" layoutY="218.0" prefHeight="371.0" prefWidth="793.0">
         <columns>
-          <TableColumn prefWidth="227.0" text="Nombre Estudiante" />
-          <TableColumn prefWidth="192.0" text="Matricula" />
-            <TableColumn prefWidth="232.0" text="Carrera" />
+          <TableColumn fx:id="colNombre" prefWidth="336.0" text="Nombre Estudiante" />
+          <TableColumn fx:id="colMatricula" prefWidth="199.0" text="Matricula" />
+            <TableColumn fx:id="colCarrera" prefWidth="257.0" text="Carrera" />
         </columns>
       </TableView>
-      <TextField fx:id="tfBuscar" layoutX="250.0" layoutY="84.0" prefHeight="31.0" prefWidth="235.0" promptText="Buscar" />
-      <Button layoutX="334.0" layoutY="444.0" mnemonicParsing="false" onAction="#clicSeleccionar" text="Seleccionar" />
+      <TextField fx:id="tfBuscar" layoutX="418.0" layoutY="170.0" prefHeight="31.0" prefWidth="235.0" promptText="Buscar" />
+      <Button layoutX="389.0" layoutY="630.0" mnemonicParsing="false" onAction="#clicSeleccionar" text="Seleccionar" />
+      <Label layoutX="294.0" layoutY="36.0" text="Estudiantes">
+         <font>
+            <Font name="Bodoni MT Black" size="48.0" />
+         </font>
+      </Label>
+      <Label layoutX="260.0" layoutY="103.0" text="Selecciona un Estudiante para comenzar" textFill="#0000ee">
+         <font>
+            <Font name="Bookman Old Style Bold" size="16.0" />
+         </font>
+      </Label>
+      <Button layoutX="751.0" layoutY="170.0" mnemonicParsing="false" text="Matricula" />
+      <Button layoutX="665.0" layoutY="170.0" mnemonicParsing="false" text="Nombre" />
    </children>
 </AnchorPane>
