--- a/src/sistemavinculacion/vista/FXMLExpedienteEstudiante.fxml
+++ b/src/sistemavinculacion/vista/FXMLExpedienteEstudiante.fxml
@@ -8,22 +8,21 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="612.0" prefWidth="790.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sistemavinculacion.controlador.FXMLExpedienteEstudianteController">
+<AnchorPane id="AnchorPane" prefHeight="566.0" prefWidth="790.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistemavinculacion.controlador.FXMLExpedienteEstudianteController">
    <children>
-      <TabPane prefHeight="538.0" prefWidth="790.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane prefHeight="494.0" prefWidth="790.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Datos Personales">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="494.0" prefWidth="790.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="790.0">
                      <children>
-                        <TextField layoutX="326.0" layoutY="44.0" prefHeight="33.0" prefWidth="264.0" promptText="Nombre" />
-                        <TextField layoutX="327.0" layoutY="93.0" prefHeight="27.0" prefWidth="262.0" promptText="Matricula" />
-                        <TextField layoutX="325.0" layoutY="263.0" prefHeight="33.0" prefWidth="266.0" promptText="Seguro" />
-                        <TextField layoutX="325.0" layoutY="147.0" prefHeight="32.0" prefWidth="267.0" promptText="Correo" />
-                        <TextField layoutX="327.0" layoutY="206.0" prefHeight="25.0" prefWidth="263.0" promptText="Telefono" />
-                        <TextField layoutX="327.0" layoutY="326.0" prefHeight="31.0" prefWidth="265.0" promptText="Promedio" />
-                        <TextField layoutX="327.0" layoutY="390.0" prefHeight="31.0" prefWidth="267.0" promptText="Creditos" />
+                        <TextField fx:id="tfNombreEstudiante" editable="false" layoutX="326.0" layoutY="44.0" prefHeight="33.0" prefWidth="264.0" promptText="Nombre" />
+                        <TextField fx:id="ftMatricula" editable="false" layoutX="327.0" layoutY="93.0" prefHeight="27.0" prefWidth="262.0" promptText="Matricula" />
+                        <TextField fx:id="tfSeguroFacultativo" editable="false" layoutX="325.0" layoutY="263.0" prefHeight="33.0" prefWidth="266.0" promptText="Seguro" />
+                        <TextField fx:id="tfCorreo" editable="false" layoutX="325.0" layoutY="147.0" prefHeight="32.0" prefWidth="267.0" promptText="Correo" />
+                        <TextField fx:id="tfTelefono" editable="false" layoutX="327.0" layoutY="206.0" prefHeight="25.0" prefWidth="263.0" promptText="Telefono" />
+                        <TextField fx:id="tfPromedio" editable="false" layoutX="327.0" layoutY="326.0" prefHeight="31.0" prefWidth="265.0" promptText="Promedio" />
+                        <TextField fx:id="tfCreditos" editable="false" layoutX="327.0" layoutY="390.0" prefHeight="31.0" prefWidth="267.0" promptText="Creditos" />
                         <Label layoutX="226.0" layoutY="47.0" text="Nombre:">
                            <font>
                               <Font name="Bodoni MT" size="22.0" />
@@ -44,7 +43,7 @@
                               <Font name="Bodoni MT" size="22.0" />
                            </font>
                         </Label>
-                        <Label layoutX="122.0" layoutY="266.0" text="Seguero Facultativo:">
+                        <Label layoutX="122.0" layoutY="266.0" text="Seguro Facultativo:">
                            <font>
                               <Font name="Bodoni MT" size="22.0" />
                            </font>
@@ -64,64 +63,46 @@
                               <Image url="@../../imagenes/Usuario%20Estudiante.png" />
                            </image>
                         </ImageView>
-                        <Button layoutX="350.0" layoutY="448.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="90.0" text="Editar" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="Historial Proyectos">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <TableView fx:id="tvProyectos" layoutX="46.0" layoutY="45.0" prefHeight="419.0" prefWidth="698.0">
-                          <columns>
-                            <TableColumn prefWidth="143.0" text="Nombre Proyecto" />
-                            <TableColumn prefWidth="141.0" text="Organizacion" />
-                              <TableColumn prefWidth="136.0" text="Ubicacion" />
-                              <TableColumn prefWidth="138.0" text="Fecha Inicio" />
-                              <TableColumn prefWidth="126.0" text="Fecha Fin" />
-                          </columns>
-                        </TableView>
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
             <Tab text="Reportes Desempeño">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="611.0" prefWidth="790.0">
                      <children>
-                        <TableView fx:id="tvReportes" layoutX="124.0" layoutY="40.0" prefHeight="356.0" prefWidth="543.0">
+                        <TableView fx:id="tvReportes" layoutX="59.0" layoutY="29.0" prefHeight="356.0" prefWidth="674.0">
                           <columns>
-                            <TableColumn prefWidth="150.0" text="Numero de reporte" />
-                              <TableColumn prefWidth="241.0" text="Creado Por" />
-                              <TableColumn prefWidth="151.0" text="Fecha de Creacion" />
+                            <TableColumn fx:id="colNumeroReporte" prefWidth="223.0" text="Num. Reporte" />
+                              <TableColumn fx:id="colNombreReporte" prefWidth="254.0" text="Tipo de Reporte" />
+                              <TableColumn fx:id="colFechaCreacion" minWidth="0.0" prefWidth="196.0" text="Fecha de Creacion" />
                           </columns>
                         </TableView>
-                        <Button layoutX="357.0" layoutY="425.0" mnemonicParsing="false" text="Imprimir" />
+                        <Button layoutX="357.0" layoutY="399.0" mnemonicParsing="false" onAction="#clicImprimirReporte" text="Imprimir" />
                      </children>
                   </AnchorPane>
               </content>
             </Tab>
             <Tab text="Documentos Oficiales">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="495.0" prefWidth="790.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="790.0">
                      <children>
-                        <Label layoutX="147.0" layoutY="94.0" text="Carta de Asignacion:">
+                        <Label layoutX="189.0" layoutY="94.0" text="Carta de Asignacion:">
                            <font>
                               <Font name="Bodoni MT" size="29.0" />
                            </font>
                         </Label>
-                        <Label layoutX="149.0" layoutY="164.0" text="Carta de Liberacion:">
+                        <Label layoutX="192.0" layoutY="164.0" text="Carta de Liberacion:">
                            <font>
                               <Font name="Bodoni MT" size="29.0" />
                            </font>
                         </Label>
-                        <Label layoutX="144.0" layoutY="241.0" text="Plan de Actividades:">
+                        <Label layoutX="190.0" layoutY="241.0" text="Plan de Actividades:">
                            <font>
                               <Font name="Bodoni MT" size="29.0" />
                            </font>
                         </Label>
-                        <Label layoutX="144.0" layoutY="323.0" text="Evaluacion de la Oganizacion:">
+                        <Label layoutX="74.0" layoutY="323.0" text="Evaluacion de la Oganizacion:">
                            <font>
                               <Font name="Bodoni MT" size="29.0" />
                            </font>
@@ -129,13 +110,13 @@
                         <Button layoutX="496.0" layoutY="96.0" mnemonicParsing="false" onAction="#clicImprimirAsignacion" prefHeight="31.0" prefWidth="112.0" text="Imprimir" />
                         <Button layoutX="496.0" layoutY="166.0" mnemonicParsing="false" onAction="#clicImprimirLiberacion" prefHeight="31.0" prefWidth="112.0" text="Imprimir" />
                         <Button layoutX="496.0" layoutY="243.0" mnemonicParsing="false" onAction="#clicImprimirActividades" prefHeight="31.0" prefWidth="112.0" text="Imprimir" />
-                        <Button layoutX="541.0" layoutY="325.0" mnemonicParsing="false" onAction="#clicImprimirEvaluacion" prefHeight="31.0" prefWidth="112.0" text="Imprimir" />
+                        <Button layoutX="496.0" layoutY="325.0" mnemonicParsing="false" onAction="#clicImprimirEvaluacion" prefHeight="31.0" prefWidth="112.0" text="Imprimir" />
                      </children>
                   </AnchorPane>
               </content>
             </Tab>
         </tabs>
       </TabPane>
-      <Button layoutX="349.0" layoutY="552.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="93.0" text="Finalizar" />
+      <Button layoutX="349.0" layoutY="520.0" mnemonicParsing="false" onAction="#clicFinalizar" prefHeight="33.0" prefWidth="93.0" text="Finalizar" />
    </children>
 </AnchorPane>
