--- a/src/sistemavinculacion/vista/FXMLSeleccionProyectos.fxml
+++ b/src/sistemavinculacion/vista/FXMLSeleccionProyectos.fxml
@@ -1,25 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="562.0" prefWidth="764.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sistemavinculacion.controlador.FXMLSeleccionProyectosController">
+<AnchorPane id="AnchorPane" prefHeight="653.0" prefWidth="764.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistemavinculacion.controlador.FXMLSeleccionProyectosController">
    <children>
-      <TableView fx:id="tvProyectosOferta" layoutX="29.0" layoutY="51.0" prefHeight="391.0" prefWidth="527.0">
+      <TableView fx:id="tvProyectosOferta" layoutX="25.0" layoutY="178.0" prefHeight="391.0" prefWidth="595.0">
         <columns>
-          <TableColumn prefWidth="205.0" text="Nombre Proyecto" />
-          <TableColumn minWidth="3.0" prefWidth="220.0" text="Organizacion" />
-            <TableColumn prefWidth="101.0" text="Cupos" />
+          <TableColumn fx:id="colNombreProyecto" prefWidth="267.0" text="Nombre Proyecto" />
+          <TableColumn fx:id="colNombreOrganizacion" minWidth="3.0" prefWidth="242.0" text="Organizacion" />
+            <TableColumn fx:id="colCupos" prefWidth="85.0" text="Cupos" />
         </columns>
       </TableView>
-      <Button layoutX="604.0" layoutY="206.0" mnemonicParsing="false" onAction="#clicTercera" prefHeight="31.0" prefWidth="79.0" text="Tercera" />
-      <Button layoutX="604.0" layoutY="156.0" mnemonicParsing="false" onAction="#clicSegunda" text="Segunda" />
-      <Button layoutX="604.0" layoutY="103.0" mnemonicParsing="false" onAction="#clicPrimera" prefHeight="31.0" prefWidth="79.0" text="Primera" />
-      <Button layoutX="569.0" layoutY="479.0" mnemonicParsing="false" onAction="#clicGuardar" text="Guardar Seleccion" />
-      <Button layoutX="69.0" layoutY="479.0" mnemonicParsing="false" onAction="#clicVolver" prefHeight="31.0" prefWidth="139.0" text="Volver" />
+      <Button layoutX="643.0" layoutY="329.0" mnemonicParsing="false" onAction="#clicTercera" prefHeight="31.0" prefWidth="79.0" text="Tercera" />
+      <Button layoutX="643.0" layoutY="280.0" mnemonicParsing="false" onAction="#clicSegunda" text="Segunda" />
+      <Button layoutX="643.0" layoutY="229.0" mnemonicParsing="false" onAction="#clicPrimera" prefHeight="31.0" prefWidth="79.0" text="Primera" />
+      <Button layoutX="582.0" layoutY="604.0" mnemonicParsing="false" onAction="#clicGuardar" text="Guardar Seleccion" />
+      <Button layoutX="82.0" layoutY="604.0" mnemonicParsing="false" onAction="#clicVolver" prefHeight="31.0" prefWidth="139.0" text="Volver" />
+      <Label layoutX="152.0" layoutY="33.0" text="Realizar Seleccion de Proyectos">
+         <font>
+            <Font name="Bodoni MT Bold" size="37.0" />
+         </font>
+      </Label>
+      <Label layoutX="242.0" layoutY="92.0" text="Elige tus opciones de proyectos" textFill="#0105f2">
+         <font>
+            <Font name="Bookman Old Style Bold" size="17.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="112.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../imagenes/Logo-UV.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
